[package]
name = "raw_html_rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
ascii = "1.1.0"
cbc = { version = "0.1.2", features = ["std"] }
dotenv = { version = "0.15.0", default-features = false }
http-body-util = { version = "0.1.2", default-features = false }
hyper = { version = "1.4.1", features = ["http2", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
maud = "0.26.0"
md5 = "0.7.0"
once_cell = "1.19.0"
openssl = { version = "0.10.66", features = ["vendored"] }
pin-project-lite = { version = "0.2.14", default-features = false }
pretty_env_logger = "0.5.0"
rand = { version = "0.8.5", default-features = false }
rusqlite = { version = "0.32.1", default-features = false, features = ["time"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde_json = "1.0.127"
serde_urlencoded = "0.7.1"
tao = "0.30.2"
time = { version = "0.3.36", default-features = false, features = ["macros", "serde", "serde-well-known", "std"] }
tokio = { version = "1.40.0", default-features = false, features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
tokio-native-tls = { version = "0.3.1", default-features = false, features = ["vendored"] }
wry = { version = "0.45.0", features = ["devtools", "linux-body"] }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
