[package]
name = "raw_html_rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
ascii = "1.1.0"
cbc = { version = "0.1.2", features = ["std"] }
dotenv = { version = "0.15.0", default-features = false }
jsonwebtoken = { version = "9.3.0", default-features = false }
maud = "0.26.0"
md5 = "0.7.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", default-features = false }
rusqlite = { version = "0.32.1", default-features = false, features = ["time"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde_json = "1.0.127"
serde_urlencoded = "0.7.1"
tao = "0.30.2"
time = { version = "0.3.36", default-features = false, features = ["macros", "serde", "serde-well-known", "std"] }
tiny_http = "0.12.0"
tokio = { version = "1.41.0", default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time", "tokio-macros"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
tungstenite = "0.24.0"
webpki-roots = "0.26.6"
wry = { version = "0.45.0", features = ["devtools", "linux-body"] }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
